--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: erlang
 sudo: false
 otp_release:
-   - 18.1
+   - 18.2.1
 
-script: "./rebar3 compile"
+install: wget https://s3.amazonaws.com/rebar3/rebar3 && chmod 755 rebar3
+script: PATH=.:$PATH make compile
 notifications:
   email: false
