--- a/rebar.config
+++ b/rebar.config
@@ -30,3 +30,16 @@
         ]}
     ]}
 ]}.
+
+{relx, [
+    {release, {boss_db_success_app, "0.1.0"},
+        [ boss_db_success_app ]},
+
+    {extended_start_script, true},
+    {generate_start_script, true},
+
+    {include_erts, false},
+
+    {include_src, false}
+
+]}.
