--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ otp_release:
    - 18.2.1
 
 install: wget https://s3.amazonaws.com/rebar3/rebar3 && chmod 755 rebar3
-script: PATH=.:$PATH make compile
+script: PATH=.:$PATH make check-all
 notifications:
   email: false
