Tweak default compilation according the discussion on rebar3 support

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,9 @@
+{erl_opts, [debug_info]}.
 
 {boss_db_opts, [
      {model_dir, "src/model"}
     ,{source_ext, ".boss"}
+    ,{compiler_options, [debug_info]}
 ]}.
 
 {provider_hooks, [
@@ -18,15 +20,14 @@
 
 {profiles, [
     {prod, [
-         {erl_opts, [no_debug_info, warnings_as_errors]}
+         {erl_opts, [warnings_as_errors]}
         ,{boss_db_opts, [
-            {compiler_options, [no_debug_info, warnings_as_errors]}
+            {compiler_options, [warnings_as_errors]}
         ]}
     ]},
     {test, [
-         {erl_opts, [debug_info]}
-        ,{boss_db_opts, [
-            {compiler_options, [debug_info, return_errors]}
+        {boss_db_opts, [
+            {compiler_options, [return_errors]}
         ]}
     ]}
 ]}.
@@ -41,5 +42,7 @@
     {include_erts, false},
 
     {include_src, false}
+
+    ,{debug_info, strip}
 
 ]}.
